--- a/Components/Client/ClientComponents.css
+++ b/Components/Client/ClientComponents.css
@@ -1,9 +1,12 @@
+/* Heading Font */
+@import url("https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Dosis:wght@200..800&display=swap");
+
 /* ## Heade ## */
 .header {
   width: 100%;
   height: 100%;
-  background-image: url("../../Assets/header-banner.jpg");
-  background-color: rgba(0, 0, 0, 0.5);
+  background-image: url("../../Assets/hero.jpeg");
+  background-color: rgba(0, 0, 0, 0.6);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
